# lunatech-pa-electronic-invoices

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.test  README.md  config-ui-demo.yaml  config.yaml  docker-compose.yml  rapport-conformite-pdp.md
.github/: dependabot.yaml
assets/design/: ferrite-landing.html
crates/pdp-annuaire/: Cargo.toml
crates/pdp-annuaire/src/: db.rs  f13.rs  ingest.rs  lib.rs  model.rs  parser.rs  processor.rs  service.rs
crates/pdp-annuaire/tests/: annuaire_validation_test.rs  integration_test.rs  parser_test.rs  routing_code_lookup_test.rs
crates/pdp-app/: Cargo.toml
crates/pdp-app/benches/: volume_bench.rs
crates/pdp-app/src/: admin.rs  lib.rs  main.rs  security.rs  server.rs  session.rs  ui.rs  webhooks.rs  webhooks_subscriber.rs
crates/pdp-app/static/: annuaire.html  annuaire.js  login.html
crates/pdp-app/tests/: pipeline_annuaire_test.rs  security_test.rs  ui_test.rs
crates/pdp-cdar/: Cargo.toml
crates/pdp-cdar/benches/: cdar_bench.rs
crates/pdp-cdar/src/: cdv_return.rs  generator.rs  lib.rs  model.rs  parser.rs  ppf_relay.rs  processor.rs
crates/pdp-cdar/tests/: lifecycle_integration.rs  pipeline_error_tests.rs
crates/pdp-client/: Cargo.toml
crates/pdp-client/src/: afnor.rs  annuaire.rs  attachment.rs  auth.rs  batch.rs  error.rs  lib.rs  model.rs  ppf.rs  ppf_consumer.rs  producer.rs  routing.rs
crates/pdp-client/tests/: integration_test.rs  ppf_return_integration.rs  routing_integration.rs
crates/pdp-config/: Cargo.toml
crates/pdp-config/src/: lib.rs  loader.rs  model.rs  registry.rs  tenant.rs
crates/pdp-core/: Cargo.toml
crates/pdp-core/benches/: archive_bench.rs
crates/pdp-core/src/: alert.rs  archive.rs  channel.rs  endpoint.rs  error.rs  exchange.rs  lib.rs  model.rs  processor.rs  reception.rs  retry.rs  route.rs  router.rs
crates/pdp-ereporting/: Cargo.toml
crates/pdp-ereporting/src/: generator.rs  lib.rs  model.rs
crates/pdp-ereporting/tests/: use_cases.rs
crates/pdp-events/: Cargo.toml
crates/pdp-events/src/: bus.rs  dispatcher.rs  error.rs  event.rs  lib.rs  processor.rs  store.rs
crates/pdp-events/tests/: integration_test.rs
crates/pdp-invoice/: Cargo.toml
crates/pdp-invoice/benches/: invoice_bench.rs
crates/pdp-invoice/src/: cii.rs  detector.rs  facturx.rs  lib.rs  processor.rs  ubl.rs  validator.rs
crates/pdp-invoice/tests/: generate_facturx_fixtures.rs
crates/pdp-peppol/: Cargo.toml
crates/pdp-peppol/src/: as4.rs  error.rs  gateway.rs  lib.rs  model.rs  processor.rs  sbdh.rs  smp.rs
crates/pdp-peppol/tests/: peppol_integration.rs
crates/pdp-sftp/: Cargo.toml
crates/pdp-sftp/src/: config.rs  consumer.rs  hostkey.rs  lib.rs  producer.rs
crates/pdp-trace/: Cargo.toml
crates/pdp-trace/src/: backend.rs  dedup.rs  event_subscriber.rs  init.rs  lib.rs  processor.rs  store.rs
crates/pdp-transform/: Cargo.toml  build.rs
crates/pdp-transform/benches/: transform_bench.rs
crates/pdp-transform/examples/: generate_sample_pdfs.rs
crates/pdp-transform/src/: attachments.rs  converter.rs  facturx_generator.rs  fop_engine.rs  lib.rs  ppf_flux1.rs  processor.rs  saxonc_ffi.rs  typst_engine.rs  xslt_engine.rs
crates/pdp-validate/: Cargo.toml
crates/pdp-validate/benches/: validate_bench.rs
crates/pdp-validate/src/: error.rs  lib.rs  processor.rs  schematron.rs  xsd.rs
docker/: bench-as4.sh  peppol-setup.sh  test-sbdh.sh
docker/oxalis/: logback.xml  oxalis-keystore.jks  oxalis.conf
docker/smp/: application.properties
docs/: annuaire.md  api.md  archives.md  cdar.md  conformite-adresses-electroniques.md  docker.md  ereporting.md  events.md  facturx.md  flux1.md  http-api.md  installation.md  peppol.md  performance.md  ppf-afnor.md  rapport-conformite-pdp.md  spec-driven.md  specifications.md  tests.md  todo.md  tracabilite.md  ui.md  webhooks.md  workflows.md
docs/bruno-collection/: README.md  bruno.json
docs/bruno-collection/00-Health/: Healthcheck.bru  Metrics.bru
docs/bruno-collection/01-Flow/: Get Flow by ID.bru  List Flows.bru  Submit Flow (multipart).bru
docs/bruno-collection/02-Webhooks/: Create Webhook.bru  Delete Webhook.bru  Get Webhook.bru  List Webhooks.bru  Update Webhook.bru
docs/bruno-collection/03-Directory/: Get Routing Code.bru  Get SIREN.bru  Get SIRET.bru  Search SIREN.bru
docs/bruno-collection/04-Errors/: 401 Unauthorized.bru  404 Not Found.bru
docs/bruno-collection/environments/: local.bru
output/: cii_with_pj_to_ubl.xml  facturx_cii_en16931.xml  facturx_cii_extended.xml  facturx_ubl_en16931.xml  facturx_ubl_extended.xml  facturx_with_pj_to_cii.xml  facturx_with_pj_to_ubl.xml  ubl_with_pj_to_cii.xml
specs/fop/: fop-facturx.xconf
specs/swagger/: ANNEXE_A_XP_Z12-013_Flow_Service_V1.2.0.json  ANNEXE_B_XP_Z12-013_Directory_Service_V1.2.0.json
specs/typst/: bon_commande.typ  bordereau_livraison.typ  invoice.typ
specs/use-cases/: XP_Z12-014_Annexe_A_V1.3_EN.md  XP_Z12-014_Annexe_A_V1.3_FR.md
specs/xsd/cdar/: CrossDomainAcknowledgementAndResponse_100pD23B.xsd  CrossDomainAcknowledgementAndResponse_100pD23B_urn_un_unece_uncefact_codelist_standard_UNECE_ContactFunctionCode_D23A.xsd  CrossDomainAcknowledgementAndResponse_100pD23B_urn_un_unece_uncefact_codelist_standard_UNECE_MessageFunctionCode_Acknowledgement_D23A.xsd  CrossDomainAcknowledgementAndResponse_100pD23B_urn_un_unece_uncefact_codelist_standard_UNECE_ReferenceTypeCode_D23A.xsd
specs/xsd/cdar-d23b-uncoupled/: errors.txt
specs/xslt/br-fr-1.2.0/: 20251114_BR-FR-Flux2-Schematron-CII_V1.2.0-compiled.xsl
specs/xslt/convert/: CII-to-F1Base-CII.xslt  CII-to-FO.xslt  CII-to-UBL.xslt  UBL-to-CII.xslt  UBL-to-F1Base-UBL.xslt
specs/xslt/fr/: 20251114_BR-FR-CDV-Schematron-CDAR_V1.2.0-compiled.xsl  20251114_BR-FR-Flux2-Schematron-UBL_V1.2.0-compiled.xsl
specs/xslt/ppf-flux1-v3.1/: CII-to-F1Full-CII.xslt  UBL-to-F1Full-UBL.xslt
tests/: use_cases.rs
tests/fixtures/annuaire/: F14_demo.xml  F14_extrait_test.xml
tests/fixtures/cdar/: cdar_response_001.xml  cdv_200_deposee.xml  (+38 more)
tools/: gen-fixtures-bulk.py  gen-fixtures-recues.py  replace-empty-pj.py
(+469 files in other folders)
