[package]
name = "pdp-annuaire"
description = "Annuaire PPF — parser F14/F13 streaming, stockage PostgreSQL, résolution de routage locale"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
quick-xml = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
pdp-core = { path = "../pdp-core" }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
