[package]
name = "pdp-app"
description = "Main application binary: CLI and orchestration"
version.workspace = true
edition.workspace = true

[[bin]]
name = "pdp"
path = "src/main.rs"

[dependencies]
pdp-core = { path = "../pdp-core" }
pdp-sftp = { path = "../pdp-sftp" }
pdp-invoice = { path = "../pdp-invoice" }
pdp-transform = { path = "../pdp-transform" }
pdp-trace = { path = "../pdp-trace" }
pdp-cdar = { path = "../pdp-cdar" }
pdp-config = { path = "../pdp-config" }
pdp-client = { path = "../pdp-client" }
pdp-validate = { path = "../pdp-validate" }
pdp-annuaire = { path = "../pdp-annuaire" }
tokio = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }

[[bench]]
name = "volume_bench"
harness = false

[dev-dependencies]
http-body-util = "0.1"
criterion = { workspace = true }
pdp-invoice = { path = "../pdp-invoice" }
pdp-cdar = { path = "../pdp-cdar" }
pdp-core = { path = "../pdp-core" }
