[package]
name = "pdp-client"
description = "Client PPF (SFTP tar.gz) et AFNOR XP Z12-013 (HTTP)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
pdp-core = { path = "../pdp-core" }
pdp-sftp = { path = "../pdp-sftp" }

async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
pdp-invoice = { path = "../pdp-invoice" }
pdp-cdar = { path = "../pdp-cdar" }
pdp-ereporting = { path = "../pdp-ereporting" }
pdp-validate = { path = "../pdp-validate" }
