[package]
name = "pdp-events"
description = "Bus d'événements interne et journal d'audit durable (PostgreSQL outbox)"
version.workspace = true
edition.workspace = true

[dependencies]
pdp-core = { path = "../pdp-core" }

tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
