[package]
name = "pdp-sftp"
description = "SFTP connector for ingestion and distribution of invoices"
version.workspace = true
edition.workspace = true

[dependencies]
pdp-core = { path = "../pdp-core" }
tokio = { workspace = true }
async-trait = { workspace = true }
russh = { workspace = true }
russh-sftp = { workspace = true }
russh-keys = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
