[package]
name = "pdp-trace"
description = "Traceability: flow tracking, error logging, audit trail"
version.workspace = true
edition.workspace = true

[dependencies]
pdp-core = { path = "../pdp-core" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
